--- a/signup/css/style.css
+++ b/signup/css/style.css
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: "Muli-Regular";
-  src: url("../fonts/muli/Muli-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Muli-SemiBold";
-  src: url("../fonts/muli/Muli-SemiBold.ttf");
-}
-
-@font-face {
-  font-family: "Muli-Bold";
-  src: url("../fonts/muli/Muli-Bold.ttf");
-}
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -20,7 +5,7 @@
 }
 
 body {
-  font-family: "Muli-Regular";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
   color: #666;
   font-size: 13px;
   margin: 0;
@@ -30,7 +15,7 @@ input,
 textarea,
 select,
 button {
-  font-family: "Muli-Regular";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
   color: #333;
   font-size: 13px;
 }
@@ -83,10 +68,10 @@ a:hover {
 .inner h3 {
   text-transform: uppercase;
   font-size: 22px;
-  font-family: "Muli-Bold";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
   text-align: center;
   margin-bottom: 32px;
-  color: #333;
+  color: rgb(28, 13, 95);
   letter-spacing: 2px;
 }
 
@@ -123,12 +108,12 @@ form {
   height: 40px;
   padding: 0 20px;
   border-radius: 20px;
-  font-family: "Muli-Bold";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
   background: none;
 }
 
 .form-control:focus {
-  border: 1px solid rgb(72, 44, 191);
+  border: 1px solid c;
 }
 
 select {
@@ -153,12 +138,12 @@ select option[value=""][disabled] {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0;
+  padding: 0 0 2px 0;
   background: #eeedf2;
-  font-size: 13px;
+  font-size: 14px;
   color: rgb(72, 44, 191);
   text-transform: uppercase;
-  font-family: "Muli-SemiBold";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
   border-radius: 20px;
   overflow: hidden;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -187,22 +172,6 @@ select option[value=""][disabled] {
   transform: scaleX(1);
   -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
   transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
-}
-
-.fb {
-  color: #fff;
-  background: rgb(28, 85, 192);
-  margin: auto;
-  margin-top: 20px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  text-transform: uppercase;
-  font-family: "Muli-SemiBold";
-  border-radius: 20px;
-  overflow: hidden;
 }
 
 .checkbox {
@@ -447,7 +416,7 @@ select option[value=""][disabled] {
 .alert {
   position: relative;
   padding: 0.75rem 1.25rem;
-  margin-bottom: 1rem;
+  margin-bottom: -1rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
 }
@@ -504,6 +473,7 @@ select option[value=""][disabled] {
 }
 
 button.close {
+  margin-top: -6px;
   padding: 0;
   background-color: transparent;
   border: 0;
@@ -538,6 +508,11 @@ button.close {
     padding-right: 15px;
     padding-left: 15px;
   }
+}
+
+.login-link {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
