--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ input:-webkit-autofill:focus {
     position: absolute;
     right: 15px;
     top: 12px;
+    text-align: center;
 }
 
 .mainmenu-area .right-button a {
@@ -348,11 +349,13 @@ input:-webkit-autofill:focus {
     padding: 10px 40px;
     border-radius: 50px;
     background-color: rgba(255, 255, 255, 0.3);
-    display: inline-block;
-    text-transform: uppercase;
+    display: block;
     letter-spacing: 1.5px;
     font-weight: 700;
     font-size: 14px;
+    width: 11em;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .mainmenu-area .right-button a:hover {
@@ -410,7 +413,7 @@ input:-webkit-autofill:focus {
 .text-center.page-title .title:before,
 .page-title .title:after {
     content: '';
-    width: 50px;
+    width: 30px;
     height: 1px;
     display: inline-block;
     background-color: #e1e1e1;
@@ -653,11 +656,6 @@ input:-webkit-autofill:focus {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#482cbf', endColorstr='#6ac6f0', GradientType=1);
     /* IE6-9 fallback on horizontal gradient */
     color: #ffffff;
-}
-
-.gallery-slide .owl-stage-outer {
-    background: url('images/mobile-screen.png') no-repeat center right / auto 100%;
-
 }
 
 .gallery-slide .item {
@@ -1355,6 +1353,10 @@ iframe {
 
 .fancybox-slide--iframe .fancybox-content {
     max-width: 800px;
-    max-height: 760px;
+    max-height: 700px;
     margin: 0;
+}
+
+.profile-btn {
+    display: none;
 }
