--- a/sell/css/details.css
+++ b/sell/css/details.css
@@ -1,14 +1,10 @@
-.dtin p {
-    font: 13px Open Sans;
-    margin-bottom: 30px;
-    margin-left: 4.5px;
-}
-
 .dtin input[type="text"],
 input[type="email"] {
+    height: 50px;
+    font-size: 14px;
     width: 98%;
-    padding: 15px 0px 15px 8px;
-    border-radius: 5px;
+    padding: 15px 0px 15px 20px;
+    border-radius: 25px;
     box-shadow: inset 4px 6px 10px -4px rgba(7, 69, 76, 0.3), 0 1px 1px -1px rgba(255, 255, 255, 0.3);
     background: rgba(7, 69, 76, 0.05);
     outline: none;
@@ -35,7 +31,7 @@ input[type="email"] {
 .email-help,
 .pnum-help {
     display: none;
-    font: 13px arial, sans-serif;
+    font-size: 12px;
     padding: 0px;
     margin: 0px 0px 15px 0px;
 }
