--- a/sell/css/main.css
+++ b/sell/css/main.css
@@ -7,6 +7,16 @@ body {
     background: #f5f6ff;
 }
 
+.btn {
+    outline: none;
+}
+
+.mbf p,
+.cbf p,
+.acbf p {
+    font-size: 14px;
+}
+
 #navi-link {
     color: white;
 }
@@ -43,26 +53,37 @@ body {
 }
 
 .btn-next {
+    padding: 0 30px;
+    display: inline-block;
     border-radius: 50px;
     letter-spacing: 1.5px;
     font-weight: 700;
     font-size: 14px;
-    padding: 12px 40px;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#482cbf+0,6ac6f0+100 */
-    background: rgb(72, 44, 191);
-    /* Old browsers */
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, rgba(72, 44, 191, 1) 0%, rgba(106, 198, 240, 1) 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: -o-linear-gradient(45deg, rgba(72, 44, 191, 1) 0%, rgba(106, 198, 240, 1) 100%);
-    background: linear-gradient(45deg, rgba(72, 44, 191, 1) 0%, rgba(106, 198, 240, 1) 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#482cbf', endColorstr='#6ac6f0', GradientType=1);
-    position: relative;
-    z-index: 1;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
+    border: none;
+    background: rgb(72, 44, 191);
+    background: -webkit-linear-gradient(45deg, rgba(72, 44, 191, 1) 0%, rgba(106, 198, 240, 1) 100%);
+    background: -o-linear-gradient(45deg, rgba(72, 44, 191, 1) 0%, rgba(106, 198, 240, 1) 100%);
+    background: linear-gradient(45deg, rgba(72, 44, 191, 1) 0%, rgba(106, 198, 240, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#482cbf', endColorstr='#6ac6f0', GradientType=1);
+    overflow: hidden;
+    z-index: 1;
+    position: relative;
+    right: 0;
+    top: 0;
+    margin-right: 0;
+    height: 50px;
+    color: #fff;
+    outline: none;
+}
+
+.btn-next:focus {
+    border: 1px solid rgb(72, 44, 191);
+    color: rgb(72, 44, 191);
+    background: #fff;
+    outline: none;
 }
 
 .btn-next:hover {
@@ -139,7 +160,7 @@ body {
 }
 
 #fset-titles {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 700;
     margin-top: 30px;
     margin-bottom: 60px;
@@ -214,7 +235,7 @@ html {
     font-size: 30px;
     font-weight: 700;
     margin-top: 30px;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     color: rgb(0, 0, 0);
 }
 
