--- a/signup/css/style.css
+++ b/signup/css/style.css
@@ -9,6 +9,7 @@ body {
   color: #666;
   font-size: 13px;
   margin: 0;
+  border-radius: 20px;
 }
 
 input,
@@ -54,6 +55,9 @@ a:hover {
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
 }
 
 .inner {
@@ -513,6 +517,22 @@ button.close {
 .login-link {
   text-decoration: underline;
   cursor: pointer;
+}
+
+.login-loader {
+  display: none;
+}
+
+.loading-image {
+  margin-top: 15px;
+  margin-bottom: -15px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
