--- a/sell/css/capacity-btns.css
+++ b/sell/css/capacity-btns.css
@@ -13,8 +13,11 @@
 }
 
 .cbf {
-    margin-bottom: 20px !important;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    font-size: 16px;
+    line-height: 32px;
+    margin-bottom: 20px !important;
     color: rgb(0, 0, 0);
 }
 
