--- a/sell/css/details.css
+++ b/sell/css/details.css
@@ -1,7 +1,11 @@
 .dtin input[type="text"],
 input[type="email"] {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 32px;
+
     height: 50px;
-    font-size: 14px;
     width: 98%;
     padding: 15px 0px 15px 20px;
     border-radius: 25px;
@@ -30,8 +34,12 @@ input[type="email"] {
 .lname-help,
 .email-help,
 .pnum-help {
-    display: none;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
     font-size: 12px;
+    line-height: 32px;
+
+    display: none;
     padding: 0px;
     margin: 0px 0px 15px 0px;
 }
