--- a/css/buy.css
+++ b/css/buy.css
@@ -512,6 +512,10 @@ input:-webkit-autofill:focus {
     display: inline-block;
 }
 
+.brand-logo:hover {
+    opacity: .7;
+}
+
 .samsung {
     height: 20px;
 }
@@ -597,4 +601,27 @@ input:-webkit-autofill:focus {
 .owl-nav .owl-next {
     right: 0;
     padding-right: 20px;
+}
+
+/* Working-Status */
+
+.working-status {
+    border-bottom: 1px solid #fff;
+    text-align: center;
+}
+
+.working-status div {
+    padding: 10px 15px;
+    display: inline-block;
+}
+
+.working-status a {
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 400;
+    color: #fff;
+}
+
+.working-status div:hover {
+    opacity: .7;
 }
