--- a/css/buy.css
+++ b/css/buy.css
@@ -506,18 +506,48 @@ input:-webkit-autofill:focus {
 }
 
 .brand-group {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
     margin: 10px 0;
 }
 
 .brand-logo {
     cursor: pointer;
-    height: 21px;
-    margin: 10px 20px;
+    height: 41px;
+    padding: 10px 0;
+    margin: 0px 20px;
     display: inline-block;
 }
 
-.brand-logo:hover {
-    opacity: .7;
+.brandl::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: rgb(255, 255, 255);
+    -webkit-transition: transform .3s ease;
+    -moz-transition: transform .3s ease;
+    -o-transition: transform .3s ease;
+    -ms-transition: transform .3s ease;
+    transition: transform .3s ease;
+    transform: scaleX(0);
+
+}
+
+.brandl:hover:after {
+    width: 100%;
+    transform: scaleX(1);
+}
+
+.brandl {
+    float: left;
+}
+
+.active-logo {
+    height: 43px;
+    border-bottom: 2px solid #fff;
 }
 
 .samsung {
@@ -630,6 +660,36 @@ input:-webkit-autofill:focus {
     color: #fff;
 }
 
-.working-status div:hover {
-    opacity: .7;
+.ws-brand::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: rgb(255, 255, 255);
+    -webkit-transition: transform .3s ease;
+    -moz-transition: transform .3s ease;
+    -o-transition: transform .3s ease;
+    -ms-transition: transform .3s ease;
+    transition: transform .3s ease;
+    transform: scaleX(0);
+
+}
+
+.ws-brand:hover:after {
+    width: 100%;
+    transform: scaleX(1);
+}
+
+.active-ws::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: rgb(255, 255, 255);
+    -webkit-transition: transform .3s ease;
+    -moz-transition: transform .3s ease;
+    -o-transition: transform .3s ease;
+    -ms-transition: transform .3s ease;
+    transition: transform .3s ease;
+    transform: scaleX(1);
 }
