--- a/css/buy.css
+++ b/css/buy.css
@@ -694,3 +694,45 @@ input:-webkit-autofill:focus {
     transition: transform .3s ease;
     transform: scaleX(1);
 }
+
+/* Alerts */
+
+.alerts>div>div {
+    position: relative;
+    border-radius: 20px;
+    margin: 10px;
+    height: 200px;
+    overflow: hidden;
+    -webkit-animation: mymove 3s infinite linear;
+    animation: mymove 3s infinite linear;
+}
+
+.alert-p p {
+    color: #fff;
+    font-size: 30px;
+}
+
+.alert-p {
+    position: absolute;
+    z-index: 999;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 40%;
+    /* Adjust this value to move the positioned div up and down */
+    text-align: center;
+    width: 90%;
+    /* Set the width of the positioned div */
+}
+
+.alerts {
+    margin-top: 100px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.alerts img {
+    max-width: 100%;
+    max-height: 100%;
+}
