--- a/css/buy.css
+++ b/css/buy.css
@@ -602,7 +602,11 @@ input:-webkit-autofill:focus {
 }
 
 .mod:hover {
-    color: rgba(255, 255, 255, 0.85);
+    color: rgb(255, 255, 255);
+    transition: color 0.3s;
+    -moz-transition: color 0.3s;
+    -webkit-transition: color 0.3s;
+    -o-transition: color 0.3s;
 }
 
 .owl-carousel {
@@ -748,17 +752,18 @@ input:-webkit-autofill:focus {
 .card-box {
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.883);
-    color: rgb(67, 67, 68);
-    font-size: 13px;
-    font-weight: 600;
+    color: rgba(87, 87, 88, 0.918);
+    font-size: 16px;
     width: 400px;
     float: left;
     padding: 20px 10px;
     margin: 10px 5px 5px 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.35), 0 6px 20px 0 rgba(0, 0, 0, 0.35);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.35), 0 6px 20px 0 rgba(0, 0, 0, 0.35);
 }
 
 .ph-color {
+    margin-top: 20px auto;
     text-align: center;
     justify-content: center;
 }
@@ -783,8 +788,10 @@ input:-webkit-autofill:focus {
 }
 
 .ph-description {
+    font-size: 14px;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.465);
+    color: rgba(87, 87, 88, 0.808);
 }
 
 .ph-marked-price {
@@ -793,10 +800,43 @@ input:-webkit-autofill:focus {
 }
 
 .ph-discount-price {
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .phone-img img {
     max-width: 100%;
     max-height: 100%;
+}
+
+.ph-buy {
+    padding: 5px 20px;
+    display: inline-block;
+    color: #ffffff;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 50px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    border: none;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#482cbf+0,6ac6f0+100 */
+    background: rgb(72, 44, 191);
+    /* Old browsers */
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, rgba(72, 44, 191, 1) 0%, rgba(106, 198, 240, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: -o-linear-gradient(45deg, rgba(72, 44, 191, 1) 0%, rgba(106, 198, 240, 1) 100%);
+    background: linear-gradient(45deg, rgba(72, 44, 191, 1) 0%, rgba(106, 198, 240, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#482cbf', endColorstr='#6ac6f0', GradientType=1);
+    color: #ffffff;
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.ph-buy:hover {
+    background: #fff;
+    outline: 1px rgba(72, 44, 191, 1);
+    color: rgba(72, 44, 191, 1);
 }
