--- a/css/buy.css
+++ b/css/buy.css
@@ -23,7 +23,6 @@ a:focus,
 a:hover {
     text-decoration: none;
     outline: none;
-    color: #768ede;
 }
 
 img {
@@ -604,6 +603,7 @@ input:-webkit-autofill:focus {
 .mod:hover {
     color: rgb(255, 255, 255);
     transition: color 0.3s;
+    font-size: 25px;
     -moz-transition: color 0.3s;
     -webkit-transition: color 0.3s;
     -o-transition: color 0.3s;
@@ -750,6 +750,7 @@ input:-webkit-autofill:focus {
 }
 
 .card-box {
+    border: 1px solid rgba(0, 0, 0, 0.767);
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.883);
     color: rgba(87, 87, 88, 0.918);
@@ -763,7 +764,7 @@ input:-webkit-autofill:focus {
 }
 
 .ph-color {
-    margin-top: 20px auto;
+    margin: 20px auto;
     text-align: center;
     justify-content: center;
 }
@@ -812,7 +813,7 @@ input:-webkit-autofill:focus {
 .ph-buy {
     padding: 5px 20px;
     display: inline-block;
-    color: #ffffff;
+    color: #ffffff !important;
     font-weight: 600;
     cursor: pointer;
     border-radius: 50px;
@@ -836,7 +837,24 @@ input:-webkit-autofill:focus {
 }
 
 .ph-buy:hover {
-    background: #fff;
-    outline: 1px rgba(72, 44, 191, 1);
-    color: rgba(72, 44, 191, 1);
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#482cbf+0,6ac6f0+100 */
+    background: rgb(72, 44, 191);
+    /* Old browsers */
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, rgb(160, 147, 221) 0%, rgba(106, 198, 240, 1) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: -o-linear-gradient(45deg, rgb(160, 147, 221) 0%, rgba(106, 198, 240, 1) 100%);
+    background: linear-gradient(45deg, rgb(160, 147, 221) 0%, rgba(106, 198, 240, 1) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#482cbf', endColorstr='#6ac6f0', GradientType=1);
+    color: rgb(72, 44, 191);
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.elcolor,
+.elmprice,
+.eldprice {
+    display: none;
 }
