--- a/sell/css/details.css
+++ b/sell/css/details.css
@@ -1,3 +1,11 @@
+/* Remove Chrome Input Field's Unwanted Yellow Background Color */
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+}
+
 .dtin input[type="text"],
 input[type="email"] {
     font-family: 'Open Sans', sans-serif;
