--- a/sell/css/main.css
+++ b/sell/css/main.css
@@ -24,6 +24,14 @@ h6 {
     line-height: 1.4em;
 }
 
+/* Remove Chrome Input Field's Unwanted Yellow Background Color */
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+}
+
 h1 {
     font-size: 60px;
 }
