option selection for buy form tweaked

--- a/css/buyform.css
+++ b/css/buyform.css
@@ -211,7 +211,8 @@ body {
     line-height: 32px;
     height: 50px;
     width: 98%;
-    padding: 15px 0px 15px 20px;
+    padding: 10px 20px;
+    text-transform: capitalize;
     border-radius: 25px;
     box-shadow: inset 4px 6px 10px -4px rgba(7, 69, 76, 0.3), 0 1px 1px -1px rgba(255, 255, 255, 0.3);
     background: rgba(7, 69, 76, 0.05);
